2009-11-01  Stephen Turnbull  <stephen@xemacs.org>

	* font.el (font-combine-fonts-internal):
	Fix syntax error in call of delete-duplicates.

2009-11-01  Stephen Turnbull  <stephen@xemacs.org>

	* lisp.el (forward-sexp):
	(backward-sexp):
	(mark-sexp):
	(forward-list):
	(backward-list):
	(down-list):
	(backward-up-list):
	(up-list):
	(kill-sexp):
	(backward-kill-sexp):
	(beginning-of-defun):
	(beginning-of-defun-raw):
	(end-of-defun):
	(insert-parentheses):
	Change generic parameter ARG to self-documenting COUNT.
	Update docstring.
	(buffer-end):
	Change generic parameter ARG to self-documenting DIRECTION.
	Update docstring.
	(narrow-to-defun):
	Document that optional ARG is ignored.

2009-10-09  Stephen Turnbull  <stephen@xemacs.org>

	* lisp.el (beginning-of-defun-function):
	(end-of-defun-function):
	(beginning-of-defun):
	(end-of-defun):
	Make docstrings stop lying.

2009-10-30  Aidan Kehoe  <kehoea@parhasard.net>

	* cl-macs.el (regexp-quote): 
	If STRING is constant, call regexp-quote at compile time.

2009-10-24  Aidan Kehoe  <kehoea@parhasard.net>

	* files.el (default-file-system-ignore-case): New variable.
	(file-system-case-alist): New variable.
	(file-system-ignore-case-p):
	New function; return t if file names under PATH should be treated
	case-insensitively.
	* minibuf.el (read-file-name-1, read-file-name-internal-1)
	(read-file-name-internal-1): 
	* package-admin.el (package-admin-check-manifest): 
	Use file-system-ignore-case-p instead of checking system-type
	directly in these functions. (Even though minibuf.el is dumped
	before files.el, the function is only called in interactive usage,
	there's no dump time order dependency here.) 

2009-10-19  Aidan Kehoe  <kehoea@parhasard.net>

	* bytecomp.el (byte-compile-default-warnings): 
	Add two new warning types, discarded-consing (basically use of
	mapcar instead of mapc where its result is discarded) and
	quoted-lambda (use of a lambda expression quoted as data in a
	function context).