@@ -1,3 +1,8 @@
+2009-11-01  Aidan Kehoe  <kehoea@parhasard.net>
+
+	* cl-extra.el (equalp): 
+	Don't error if handed a string and a non-string.
+
 2009-11-01  Stephen Turnbull  <stephen@xemacs.org>
 
 	* font.el (font-combine-fonts-internal):
